# custom-spotting

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
configs/: README.md  extract_frames.example.json  extract_frames_224.example.json  extract_frames_720p.example.json  final_posttrain_from_tdeed.example.json  final_posttrain_from_tdeed_720p.example.json  inference.example.json  inference_224.example.json  inference_720p.example.json  posttrain_from_custom.example.json  posttrain_from_tdeed.example.json  posttrain_soccernet_challenge.example.json  pretrain.example.json  train_quick_sparse_iteration.example.json
custom_spotting/: __init__.py  actions.py  augmentations.py  checkpoints.py  cli.py  config.py  data.py  eval.py  inference.py  map_scoring.py  soccernet_challenge_eval.py  training.py
custom_spotting/__pycache__/: inference.cpython-312.pyc.2322990229872  training.cpython-312.pyc.1741563610144
custom_spotting/model/: layers.py  shift.py  tdeed.py
predictions/: sample_predictions.example.json
scripts/: run-posttrain-pm2.sh
