[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-spotting"
version = "0.1.0"
description = "T-DEED-style custom-label action spotting (broadcast-style events)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Custom Spotting Contributors"}
]
keywords = ["soccer", "football", "action-spotting", "t-deed", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.7",
    "kornia>=0.7.4",
    "opencv-python>=4.10.0.84",
    "tensorboard>=2.18.0",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
challenge = ["soccernet>=0.1.61"]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_spotting"]

[project.scripts]
custom-spotting = "custom_spotting.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
